Agregando el contexto.

--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using IngresosWabA.Client
 @using IngresosWabA.Client.Shared
+@using IngresosWabA.Shared
+@using IngresosWabA.Shared.Models
